force-app/main/default/objects/Account/fields/Contact_person_fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_person_fax__c</fullName>
    <label>Contact person fax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>