force-app/main/default/objects/Account/fields/Country_ISO_code__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_code__c</fullName>
    <label>Country ISO code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>