force-app/main/default/objects/Account/fields/Country_phone_extension__c.field-meta.xml
<CustomField>
    <fullName>Country_phone_extension__c</fullName>
    <label>Country phone extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>