force-app/main/default/objects/Account/fields/Current_President__c.field-meta.xml
<CustomField>
    <fullName>Current_President__c</fullName>
    <label>Current President</label>
    <length>30</length>
    <type>Text</type>
</CustomField>