force-app/main/default/objects/Account/fields/Department_phone__c.field-meta.xml
<CustomField>
    <fullName>Department_phone__c</fullName>
    <label>Department phone</label>
    <type>Phone</type>
</CustomField>