force-app/main/default/objects/Account/fields/Has_oil__c.field-meta.xml
<CustomField>
    <fullName>Has_oil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has oil</label>
    <type>Checkbox</type>
</CustomField>