force-app/main/default/objects/Account/fields/Last_reported__c.field-meta.xml
<CustomField>
    <fullName>Last_reported__c</fullName>
    <label>Last reported</label>
    <type>Date</type>
</CustomField>