force-app/main/default/objects/Account/fields/Political_System__c.field-meta.xml
<CustomField>
    <fullName>Political_System__c</fullName>
    <label>Political System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Democracy</fullName>
            </value>
            <value>
                <fullName>Tyranny</fullName>
            </value>
            <value>
                <fullName>Monarchy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>