force-app/main/default/objects/Account/fields/Sales_Holder__c.field-meta.xml
<CustomField>
    <fullName>Sales_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Holder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>