force-app/main/default/objects/Account/fields/Send_reports__c.field-meta.xml
<CustomField>
    <fullName>Send_reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send reports</label>
    <type>Checkbox</type>
</CustomField>