force-app/main/default/objects/Account/recordTypes/Foreign.recordType-meta.xml
<RecordType>
    <fullName>Foreign</fullName>
    <active>true</active>
    <label>Foreign</label>
</RecordType>