force-app/main/default/objects/Account/recordTypes/Generic_Sales.recordType-meta.xml
<RecordType>
    <fullName>Generic_Sales</fullName>
    <active>true</active>
    <label>Generic Sales</label>
</RecordType>