force-app/main/default/objects/Account/recordTypes/Military.recordType-meta.xml
<RecordType>
    <fullName>Military</fullName>
    <active>true</active>
    <label>Military</label>
</RecordType>